# dotfiles

./: .bashrc  .clang-tidy  .gitconfig  .gtkrc-2.0  .latexmkrc  .profile  .vimrc  .xprofile  .xtermcontrol  .zshrc  configuration.nix
.config/: Xmodmap  compton.conf  mimeapps.list  picom-opacity-shader.glsl  picom.conf  redshift.conf  screenkey.json  starship.toml
.config/alacritty/: alacritty.toml  alacritty.yml
.config/bottom/: bottom-proc.toml  bottom.toml
.config/cava/: config
.config/discord/: settings.json
.config/dunst/: dunstrc  play_sound.sh  play_sound_bark.sh  play_sound_beep.sh  play_sound_drip.sh
.config/environment.d/: env.conf
.config/eww/: eww.scss  eww.yuck
.config/git/: .gitignore
.config/gtk-2.0/: gtkfilechooser.ini
.config/gtk-3.0/: settings.ini
.config/htop/: htoprc
.config/kitty/: kitty.conf
.config/lf/: lfrc  preview.sh
.config/meli/: config.toml
.config/mise/: config.toml
.config/mpd/: mpd.conf
.config/mpv/: input.conf  mpv.conf
.config/ncmpcpp/: bindings  config
.config/nix/: nix.conf
.config/nixos/: configuration.nix
.config/nvim/: coc-settings.json  config.yue  init.lua  init.moon  init.vim  init.yue  lazy-lock.json  nvim-pack-lock.json
.config/opencode/: opencode.json
.config/polybar/: config
.config/python/: startup.py
.config/qutebrowser/: config.py
.config/readline/: inputrc
.config/rofi/: config.rasi
.config/sioyek/: keys_user.config  prefs_user.config
.config/taskell/: config.ini  theme.ini
.config/tmux/: tmux.conf
.config/xbindkeys/: config
.config/xmobar/: xmobarrc
.config/xtermcontrol/: config
.config/yay/: config.json
.config/yazi/: keymap.toml  theme.toml  yazi.toml
.config/zathura/: zathurarc
.config/zsh/: .zshrc
.csillag/: install-packages.sh  packages  post-clone.sh
.dotfilesrepo/: README.md
.github/: README.md  quickstart.sh
.local/scripts/: alarm.sh  background-setter.sh  battery-monitor.sh  battery.sh  bgset.sh  blurwal_init.sh  browser-screensharing-autohide.sh  capture.zsh  config.sh  dg.sh  do-not-disturb-query.sh  ensure-no-dpms.sh  fix-audio.sh  generate-random-password.sh  gpu-query.sh  insert-new-password.sh  jjenv.sh  kb.sh  keep-mic-volume.sh  lock.sh  mic-query.sh  open.sh  package-manager-updates.sh  pan.sh  polybar_init.sh  qutebrowser-open.sh  (+20 more)
.ssh/: gen-ssh-config.sh
.xmonad/: build  csillag-xmonad.cabal  environment_variables.txt  my-xmonad.cabal  on_start.sh  package.yaml  stack.yaml  weeder.dhall  xmonad.hs  xmonadctl.hs
.xmonad/lib/XMonad/Csillag/: BibTeX.hs  Commands.hi  Commands.hs  CommonActions.hs  Consts.hi  Consts.hs  Externals.hi  Externals.hs  Keys.hi  Keys.hs  Layouts.hi  Layouts.hs  Scratchpads.hi  Scratchpads.hs  TagSystem.hs
.xmonad/lib/XMonad/Csillag/Internal/: KeyBindings.hs
.xmonad/lib/XMonad/Csillag/Layouts/: TreeLayout.hs  WindowCard.hs
.xmonad/main/: xmonad.hs
.xmonad/src/XMonad/Csillag/: Commands.hs  CommonActions.hs  Consts.hs  Externals.hs  Keys.hs  Layouts.hs  Scratchpads.hs
(+46 files in other folders)
