name:                my-xmonad
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable my-xmonad
  main-is:             ../xmonad.hs
  -- other-modules lists custom modules in my ~/.xmonad/lib/ directory
  other-modules:       XMonad.Csillag.CommonActions
                     , XMonad.Csillag.Consts
                     , XMonad.Csillag.Keys
                     , XMonad.Csillag.Layouts
                     , XMonad.Csillag.Scratchpads
                     , XMonad.Csillag.Externals
                     , XMonad.Csillag.Commands
  build-depends:       base
                     , extra
                     , xmonad >= 0.13
                     , xmonad-contrib >= 0.13
                     , xmonad-extras
                     , xmobar
                     , X11
                     , containers
                     , text
                     , directory
                     , parsec
                     , bibtex
                     , filepath
                     , split
                     , unix
                     , process
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-missing-signatures -threaded
  -- ghc-options:         -Wall -Werror -fno-warn-missing-signatures -threaded

executable xmonadctl
  main-is:             ../xmonadctl.hs
  build-depends:       base
                     , extra
                     , X11
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-missing-signatures -threaded
